--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   simple_gradient_text: 1.3.0
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
