--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.2.0+4
+version: 1.3.0+5
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -18,6 +18,7 @@ dependencies:
   animate_do: 3.1.2
   flutter_bloc: ^8.1.3
   simple_gradient_text: 1.3.0
+  firebase_core: ^3.1.0
   # firebase_core: ^2.25.4
 
 dev_dependencies:
