--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,58 +1,39 @@
 name: password_generator
 description: "A new Flutter project."
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none"
 
-
-version: 1.4.0+6
+version: 1.5.0+6
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
-
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
+  animate_do: ^3.3.8
+  awesome_extensions: ^2.0.20
+  equatable: ^2.0.7
+  firebase_core: ^3.11.0
   flutter:
     sdk: flutter
-
-
-  animate_do: 3.1.2
-  flutter_bloc: ^8.1.3
-  simple_gradient_text: 1.3.0
-  firebase_core: ^3.1.0
+  flutter_bloc: ^9.0.0
+  flutter_iconly: ^1.0.2
+  google_fonts: ^6.2.1
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
+  hive_ce_generator: ^1.8.2
+  iconsax_flutter: ^1.0.0
+  intl: ^0.20.2
+  path_provider: ^2.1.5
+  simple_gradient_text: ^1.3.0
+  sleek_circular_slider: ^2.0.1
+  toastification: ^2.3.0
 
 dev_dependencies:
+  build_runner: ^2.4.11
+  change_app_package_name: ^1.4.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
-
-  flutter_lints: ^2.0.0
-
-
-
-# The following section is specific to Flutter packages.
 flutter:
-
-
   uses-material-design: true
-
-
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: asset/fonts/poppins/Poppins-Regular.ttf
-        - asset: asset/fonts/poppins/Poppins-Medium.ttf
-          weight: 500
-        - asset: asset/fonts/poppins/Poppins-SemiBold.ttf
-          weight: 700
-          
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-
